refactor(authority): 重构组织机构模块代码结构与逻辑
- 移除 `OrganizationApiController`，合并相关功能到 `OrganizationController`
- 更新 `OrganizationController` 和 `OrganizationService` 的参数和返回类型，使用新的 `OrganizationCreateDTO` 和 `OrganizationUpdateDTO`
- 新增 `OrganizationEntity` 类作为数据库实体
- 优化 `OrganizationMapper` 接口，更新方法签名和参数类型
- 重构 `OrganizationServiceImpl` 中的方法实现，提升代码可读性和维护性